# marky

./: CMakeLists.txt  README  docs.html  download.html  index.html  style.css
_layouts/: default.html
apps/: CMakeLists.txt  marky-file.cpp
docs/: docs.html  download.html  index.html  style.css
marky/: CMakeLists.txt  backend-cache.cpp  backend-cache.h  backend-map.cpp  backend-map.h  backend-sqlite.cpp  backend-sqlite.h  backend.cpp  backend.h  build-config.in.h  config.cpp  config.h  config.in.h  link.h  marky.cpp  marky.h  markyc.cpp  markyc.h  rand-util.cpp  rand-util.h  scorer.cpp  scorer.h  selector.cpp  selector.h  snippet.cpp  snippet.h  string-pack.cpp  string-pack.h
py/: __init__.py  example.py  marky.py  marky_ctypes.py
src/: CMakeLists.txt  backend.cpp  backend.h  config.in.h  link.h  marky.cpp  marky.h  processor.cpp  processor.h  scorer.cpp  scorer.h  selector.cpp  selector.h
src/apps/: main.cpp
src/marky/: CMakeLists.txt  backend-map.cpp  backend-map.h  backend-sqlite.cpp  backend-sqlite.h  backend.h  link.h  marky.h  selector.cpp  selector.h
tests/: CMakeLists.txt  data-my_antonia.txt.bz2  test-backend-map.cpp  test-backend-sqlite.cpp  test-bench-config.in.h  test-bench-sqlite.cpp  test-link.cpp  test-marky.cpp  test-scorer.cpp  test-selector.cpp  test-snippet.cpp  test-string-pack.cpp
